force-app/main/default/objects/Contact/fields/Apelido_corretor__c.field-meta.xml
<CustomField>
    <fullName>Apelido_corretor__c</fullName>
    <label>Apelido</label>
    <length>20</length>
    <type>Text</type>
</CustomField>