force-app/main/default/objects/Contact/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proprietário</fullName>
                <default>true</default>
                <label>Proprietário</label>
            </value>
            <value>
                <fullName>Gerente</fullName>
            </value>
            <value>
                <fullName>Corretor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>