force-app/main/default/objects/Contact/fields/CelularFormatado__c.field-meta.xml
<CustomField>
    <fullName>CelularFormatado__c</fullName>
    <formula>IF(
				ISBLANK(Celular__c), 
				&quot;&quot;, 
				MID(
								TEXT(DDICelular__c), 
								FIND(&quot;+&quot;, TEXT(DDICelular__c)), 
								(LEN(TEXT(DDICelular__c))-FIND(&quot;+&quot;, TEXT(DDICelular__c)))) + 
				    IF (
								    ISBLANK(DDDCelular__c),
												&quot; &quot;,
												&quot; (&quot;+DDDCelular__c+&quot;) &quot;
								)
				    +  Celular__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Celular Formatado</label>
    <type>Text</type>
</CustomField>