force-app/main/default/objects/Contact/fields/Cep__c.field-meta.xml
<CustomField>
    <fullName>Cep__c</fullName>
    <label>Cep</label>
    <length>10</length>
    <type>Text</type>
</CustomField>