force-app/main/default/objects/Contact/fields/CidadeEndereco__c.field-meta.xml
<CustomField>
    <fullName>CidadeEndereco__c</fullName>
    <label>Cidade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>