force-app/main/default/objects/Contact/fields/Complemento__c.field-meta.xml
<CustomField>
    <fullName>Complemento__c</fullName>
    <label>Complemento</label>
    <length>150</length>
    <type>Text</type>
</CustomField>