force-app/main/default/objects/Contact/fields/CorretorAutonomo__c.field-meta.xml
<CustomField>
    <fullName>CorretorAutonomo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corretor Autônomo</label>
    <type>Checkbox</type>
</CustomField>