force-app/main/default/objects/Contact/fields/CPFFormatado__c.field-meta.xml
<CustomField>
    <fullName>CPFFormatado__c</fullName>
    <description>Formula para visualizar CPF Formatado!</description>
    <formula>IF(
    LEN(CPF__c) = 11,
    LEFT(CPF__c, 3) &amp; &quot;.&quot; &amp; MID(CPF__c, 4, 3) &amp; &quot;.&quot; &amp; MID(CPF__c, 7, 3) &amp; &quot;-&quot; &amp; RIGHT(CPF__c, 2),
    CPF__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF Formatado</label>
    <type>Text</type>
</CustomField>