force-app/main/default/objects/Contact/fields/Data_de_Vencimento_CRECI__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Vencimento_CRECI__c</fullName>
    <label>Data de Vencimento CRECI</label>
    <type>Date</type>
</CustomField>