force-app/main/default/objects/Contact/fields/DataDaEmissao__c.field-meta.xml
<CustomField>
    <fullName>DataDaEmissao__c</fullName>
    <label>Data da Emissão</label>
    <type>Date</type>
</CustomField>