force-app/main/default/objects/Contact/fields/DataDeCasamentoUniao__c.field-meta.xml
<CustomField>
    <fullName>DataDeCasamentoUniao__c</fullName>
    <label>Data de casamento/ União</label>
    <type>Date</type>
</CustomField>