force-app/main/default/objects/Contact/fields/DatadeCriacao__c.field-meta.xml
<CustomField>
    <fullName>DatadeCriacao__c</fullName>
    <label>Data de Criação</label>
    <type>Date</type>
</CustomField>