force-app/main/default/objects/Contact/fields/DataDeEmissao__c.field-meta.xml
<CustomField>
    <fullName>DataDeEmissao__c</fullName>
    <label>Data de Emissão</label>
    <type>Date</type>
</CustomField>