force-app/main/default/objects/Contact/fields/DatadeInscricoCreci__c.field-meta.xml
<CustomField>
    <fullName>DatadeInscricoCreci__c</fullName>
    <label>Data de Inscrição - Creci</label>
    <type>Date</type>
</CustomField>