force-app/main/default/objects/Contact/fields/DDDCelular__c.field-meta.xml
<CustomField>
    <fullName>DDDCelular__c</fullName>
    <label>DDD Celular</label>
    <length>5</length>
    <type>Text</type>
</CustomField>