force-app/main/default/objects/Contact/fields/DDDTelefone__c.field-meta.xml
<CustomField>
    <fullName>DDDTelefone__c</fullName>
    <label>DDD Telefone</label>
    <length>5</length>
    <type>Text</type>
</CustomField>