force-app/main/default/objects/Contact/fields/DocumentodeIdentificao__c.field-meta.xml
<CustomField>
    <fullName>DocumentodeIdentificao__c</fullName>
    <label>Documento de Identificação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipodeDocumentodeIdentiicacao</valueSetName>
    </valueSet>
</CustomField>