force-app/main/default/objects/Contact/fields/EmissaoCertidaoRegularidade__c.field-meta.xml
<CustomField>
    <fullName>EmissaoCertidaoRegularidade__c</fullName>
    <label>Emissão Certidão de Regularidade - CRECI</label>
    <type>Date</type>
</CustomField>