force-app/main/default/objects/Contact/fields/Estrangeiro__c.field-meta.xml
<CustomField>
    <fullName>Estrangeiro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estrangeiro</label>
    <type>Checkbox</type>
</CustomField>