force-app/main/default/objects/Contact/fields/FiliacaoMae__c.field-meta.xml
<CustomField>
    <fullName>FiliacaoMae__c</fullName>
    <label>Filiação (Mãe)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>