force-app/main/default/objects/Contact/fields/FiliacaoPai__c.field-meta.xml
<CustomField>
    <fullName>FiliacaoPai__c</fullName>
    <label>Filiação (Pai)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>