force-app/main/default/objects/Contact/fields/Imobiliaria_Associada__c.field-meta.xml
<CustomField>
    <fullName>Imobiliaria_Associada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Imobiliária que o corretor esta associado.</description>
    <label>Imobiliária Associada</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.PersonContactId</field>
            <operation>equals</operation>
            <valueField>$Source.ReportsToId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contatos (Imobiliária Associada)</relationshipLabel>
    <relationshipName>Contatos</relationshipName>
    <type>Lookup</type>
</CustomField>