force-app/main/default/objects/Contact/fields/LocaldeNascimento__c.field-meta.xml
<CustomField>
    <fullName>LocaldeNascimento__c</fullName>
    <label>Local de Nascimento</label>
    <length>40</length>
    <type>Text</type>
</CustomField>