force-app/main/default/objects/Contact/fields/NDocumento__c.field-meta.xml
<CustomField>
    <fullName>NDocumento__c</fullName>
    <label>Nº de Documento</label>
    <length>14</length>
    <type>Text</type>
</CustomField>