force-app/main/default/objects/Contact/fields/NumerodoCreci__c.field-meta.xml
<CustomField>
    <fullName>NumerodoCreci__c</fullName>
    <label>Número do Creci</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>