force-app/main/default/objects/Contact/fields/NumeroDocumentoIdentif__c.field-meta.xml
<CustomField>
    <fullName>NumeroDocumentoIdentif__c</fullName>
    <label>Número Documento Identificação</label>
    <length>9</length>
    <type>Text</type>
</CustomField>