force-app/main/default/objects/Contact/fields/OrgaoEmissor__c.field-meta.xml
<CustomField>
    <fullName>OrgaoEmissor__c</fullName>
    <label>Órgão Emissor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>