force-app/main/default/objects/Contact/fields/PreferenciadeHorariodeContato__c.field-meta.xml
<CustomField>
    <fullName>PreferenciadeHorariodeContato__c</fullName>
    <label>Preferência de Horário de Contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PreferenciaHorarioContato</valueSetName>
    </valueSet>
</CustomField>