force-app/main/default/objects/Contact/fields/Profissao__c.field-meta.xml
<CustomField>
    <fullName>Profissao__c</fullName>
    <label>Profissão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Profissao</valueSetName>
    </valueSet>
</CustomField>