force-app/main/default/objects/Contact/fields/RG__c.field-meta.xml
<CustomField>
    <fullName>RG__c</fullName>
    <label>RG</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>