force-app/main/default/objects/Contact/fields/Tipo_de_corretor__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_corretor__c</fullName>
    <label>Tipo de corretor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corretor Online</fullName>
            </value>
            <value>
                <fullName>Corretor Offline</fullName>
            </value>
            <value>
                <fullName>Parceiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>