force-app/main/default/objects/Contact/fields/WhatsApp__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp__c</fullName>
    <label>WhatsApp Contato</label>
    <type>Phone</type>
</CustomField>