force-app/main/default/objects/Contact/recordTypes/Cliente.recordType-meta.xml
<RecordType>
    <fullName>Cliente</fullName>
    <active>true</active>
    <description>Tipo de Registro criado para controlar o cadastro dos contatos vinculados aos clientes</description>
    <label>Cliente</label>
</RecordType>