force-app/main/default/objects/Contact/recordTypes/Corretor.recordType-meta.xml
<RecordType>
    <fullName>Corretor</fullName>
    <active>true</active>
    <description>Tipo de Registro criado para controlar o cadastro dos corretores parceiros</description>
    <label>Corretor</label>
</RecordType>