force-app/main/default/objects/Contact/validationRules/FirstNameObrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstNameObrigatorio</fullName>
    <active>true</active>
    <description>Impede que uma conta seja criada sem o campo &quot;First Name&quot;</description>
    <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Por favor, digite o primeiro nome!</errorMessage>
</ValidationRule>