force-app/main/default/objects/Contact/validationRules/Valida_DDD_Celular.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_DDD_Celular</fullName>
    <active>true</active>
    <description>Valida o DDD do Celular</description>
    <errorConditionFormula>NOT(
    OR(
        ISBLANK(DDDCelular__c),
        ISNUMBER(DDDCelular__c)
    )
)</errorConditionFormula>
    <errorDisplayField>DDDCelular__c</errorDisplayField>
    <errorMessage>Por favor, insira um DDD válido</errorMessage>
</ValidationRule>