force-app/main/default/objects/Contact/validationRules/Valida_Telefone.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Telefone</fullName>
    <active>true</active>
    <description>Valida o formato do telefone.</description>
    <errorConditionFormula>NOT(
  OR(
    ISBLANK(Phone), 
    REGEX(Phone, &apos;^\\d{1,5}+-\\d{4}$&apos;)
						)
				)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Por favor, insira um número de telefone no formato válido. Exemplo: 12345-6789.</errorMessage>
</ValidationRule>