force-app/main/default/objects/Contact/validationRules/ValidaNDocumento.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaNDocumento</fullName>
    <active>true</active>
    <errorConditionFormula>NDocumento__c &lt;&gt; UPPER(NDocumento__c)</errorConditionFormula>
    <errorDisplayField>NDocumento__c</errorDisplayField>
    <errorMessage>Letras no campo devem ser maiúsculas.</errorMessage>
</ValidationRule>